Fixed the annoying thing where - fixed width hour cards in horz-scroll div would affect the flex/grid allocation between the two child divs of body - the two child divs of main and their children mostly have flex/grid and no absolute width - the hour cards would either clip so that the window doesn't show everything or     - the main-left wouldn't shrink and the main-right would only shrink         - this throws off the 2:1 proportions
- the overflow:auto on the horz-scroll was not enough:
    - overflow:auto/hidden is required on main-right div
        - interestingly this doesnt affect non-overflowing children divs within main-right

FF

--- a/src/style.css
+++ b/src/style.css
@@ -24,11 +24,12 @@ body, html {
     width: 100%;
     height: 100%;
     background-color: antiquewhite;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     position: relative;
     background-size: 100% 100%;
 }
@@ -44,14 +45,13 @@ button:focus, input:focus {
 }
 
 #main-left {
-    flex: 2;
     display: flex;
     flex-flow: column;
+    overflow: auto; /* auto, hidden works */
 }
 
 #main-right {
-    flex: 1;
-    overflow: hidden;
+    overflow: auto;
 }
 
 #navbar {
@@ -149,7 +149,6 @@ button:focus, input:focus {
     display: flex;
     flex-flow: column;
     border-radius: 20px;
-    overflow: clip;
 }
 
 #content-top {
@@ -173,7 +172,7 @@ button:focus, input:focus {
     display: grid;
     grid-auto-flow: column;
     align-items: stretch;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 .hour-card {
@@ -266,10 +265,15 @@ button:focus, input:focus {
 @media (max-width: 900px) {
     /* /* Your CSS styles for screens with a width less than 600px go here */
     body {
-        flex-flow: column;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr 1fr;
     }
     
     #main-right {
         display: grid;
+    }
+
+    #main-right, #main-left {
+        width: 100%;
     }
   }
